feat(): cleanup html tag present in author, new database_of_embassies.csv, use nonroot user to generate file and applied black on all python file

--- a/tools/generate_csv/Dockerfile
+++ b/tools/generate_csv/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:3
 
+RUN adduser --system --no-create-home nonroot
+
 WORKDIR /usr/src/app
 
 COPY requirements.txt ./
@@ -7,4 +9,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
+RUN chown nonroot:users .
 CMD [ "python", "./generate_csv.py" ]
